Fix missing row gap in tags list

--- a/assets/src/scss/blocks/mdb-theme-blocks/_post-terms.scss
+++ b/assets/src/scss/blocks/mdb-theme-blocks/_post-terms.scss
@@ -23,7 +23,7 @@
         list-style: none;
         display: flex;
         flex-wrap: wrap;
-        gap: .75rem;
+        gap: 1.75rem .75rem;
     }
 
     ul > li {
